Common/parse_utils/parser.output
Grammaire

    0 $accept: fichier_comp $end

    1 fichier_comp: comp_sequence
    2             | fichier_comp comp_sequence

    3 sequence: STRING EOL
    4         | STRING EOL sequence

    5 comp_sequence: Cpremiere_ligne sequence EOL
    6              | Cpremiere_ligne sequence

    7 junk: %empty
    8     | PIPE junk
    9     | COL junk
   10     | STRING junk

   11 Cpremiere_ligne: CHEV STRING junk EOL


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
CHEV (258) 11
PIPE (259) 8
COL (260) 9
EOL (261) 3 4 5 11
STRING (262) 3 4 10 11


Non-terminaux, suivis des règles où ils apparaissent

$accept (8)
    à gauche: 0
fichier_comp (9)
    à gauche: 1 2, à droite: 0 2
sequence (10)
    à gauche: 3 4, à droite: 4 5 6
comp_sequence (11)
    à gauche: 5 6, à droite: 1 2
junk (12)
    à gauche: 7 8 9 10, à droite: 8 9 10 11
Cpremiere_ligne (13)
    à gauche: 11, à droite: 5 6


État 0

    0 $accept: . fichier_comp $end
    1 fichier_comp: . comp_sequence
    2             | . fichier_comp comp_sequence
    5 comp_sequence: . Cpremiere_ligne sequence EOL
    6              | . Cpremiere_ligne sequence
   11 Cpremiere_ligne: . CHEV STRING junk EOL

    CHEV  décalage et aller à l'état 1

    fichier_comp     aller à l'état 2
    comp_sequence    aller à l'état 3
    Cpremiere_ligne  aller à l'état 4


État 1

   11 Cpremiere_ligne: CHEV . STRING junk EOL

    STRING  décalage et aller à l'état 5


État 2

    0 $accept: fichier_comp . $end
    2 fichier_comp: fichier_comp . comp_sequence
    5 comp_sequence: . Cpremiere_ligne sequence EOL
    6              | . Cpremiere_ligne sequence
   11 Cpremiere_ligne: . CHEV STRING junk EOL

    $end  décalage et aller à l'état 6
    CHEV  décalage et aller à l'état 1

    comp_sequence    aller à l'état 7
    Cpremiere_ligne  aller à l'état 4


État 3

    1 fichier_comp: comp_sequence .

    $défaut  réduction par utilisation de la règle 1 (fichier_comp)


État 4

    3 sequence: . STRING EOL
    4         | . STRING EOL sequence
    5 comp_sequence: Cpremiere_ligne . sequence EOL
    6              | Cpremiere_ligne . sequence

    STRING  décalage et aller à l'état 8

    sequence  aller à l'état 9


État 5

    7 junk: . %empty  [EOL]
    8     | . PIPE junk
    9     | . COL junk
   10     | . STRING junk
   11 Cpremiere_ligne: CHEV STRING . junk EOL

    PIPE    décalage et aller à l'état 10
    COL     décalage et aller à l'état 11
    STRING  décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 7 (junk)

    junk  aller à l'état 13


État 6

    0 $accept: fichier_comp $end .

    $défaut  accepter


État 7

    2 fichier_comp: fichier_comp comp_sequence .

    $défaut  réduction par utilisation de la règle 2 (fichier_comp)


État 8

    3 sequence: STRING . EOL
    4         | STRING . EOL sequence

    EOL  décalage et aller à l'état 14


État 9

    5 comp_sequence: Cpremiere_ligne sequence . EOL
    6              | Cpremiere_ligne sequence .  [$end, CHEV]

    EOL  décalage et aller à l'état 15

    $défaut  réduction par utilisation de la règle 6 (comp_sequence)


État 10

    7 junk: . %empty  [EOL]
    8     | . PIPE junk
    8     | PIPE . junk
    9     | . COL junk
   10     | . STRING junk

    PIPE    décalage et aller à l'état 10
    COL     décalage et aller à l'état 11
    STRING  décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 7 (junk)

    junk  aller à l'état 16


État 11

    7 junk: . %empty  [EOL]
    8     | . PIPE junk
    9     | . COL junk
    9     | COL . junk
   10     | . STRING junk

    PIPE    décalage et aller à l'état 10
    COL     décalage et aller à l'état 11
    STRING  décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 7 (junk)

    junk  aller à l'état 17


État 12

    7 junk: . %empty  [EOL]
    8     | . PIPE junk
    9     | . COL junk
   10     | . STRING junk
   10     | STRING . junk

    PIPE    décalage et aller à l'état 10
    COL     décalage et aller à l'état 11
    STRING  décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 7 (junk)

    junk  aller à l'état 18


État 13

   11 Cpremiere_ligne: CHEV STRING junk . EOL

    EOL  décalage et aller à l'état 19


État 14

    3 sequence: . STRING EOL
    3         | STRING EOL .  [$end, CHEV, EOL]
    4         | . STRING EOL sequence
    4         | STRING EOL . sequence

    STRING  décalage et aller à l'état 8

    $défaut  réduction par utilisation de la règle 3 (sequence)

    sequence  aller à l'état 20


État 15

    5 comp_sequence: Cpremiere_ligne sequence EOL .

    $défaut  réduction par utilisation de la règle 5 (comp_sequence)


État 16

    8 junk: PIPE junk .

    $défaut  réduction par utilisation de la règle 8 (junk)


État 17

    9 junk: COL junk .

    $défaut  réduction par utilisation de la règle 9 (junk)


État 18

   10 junk: STRING junk .

    $défaut  réduction par utilisation de la règle 10 (junk)


État 19

   11 Cpremiere_ligne: CHEV STRING junk EOL .

    $défaut  réduction par utilisation de la règle 11 (Cpremiere_ligne)


État 20

    4 sequence: STRING EOL sequence .

    $défaut  réduction par utilisation de la règle 4 (sequence)
